# data_structures_wet1

./: AVLTree.h  CMakeLists.txt  ComparePlayerById.cpp  ComparePlayerById.h  ComparePlayerByScore.cpp  ComparePlayerByScore.h  CompareTeamById.cpp  CompareTeamById.h  CompareTeamPlayerByScore.cpp  CompareTeamPlayerByScore.h  CompareValidTeamById.cpp  CompareValidTeamById.h  Player.cpp  Player.h  SimulationTeam.cpp  SimulationTeam.h  Team.cpp  Team.h  main.cpp  outputTest.out  submissions.txt  worldcup23a1.cpp  worldcup23a1.h
